Remove axios integrity check (fail on IIS)

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 </div>
 </body>
 <script src="i18n/lang_en.js" type="text/javascript"></script>
-<script src="js/axios.min.js" integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ="></script>
+<script src="js/axios.min.js"></script>
 <script src="js/tableauwdc-2.3.1.js" type="text/javascript"></script>
 <!-- vue CDN for dev, comment and use local vue.min.js for prod-->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
