--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 <script src="js/axios.min.js"></script>
 <script src="js/tableauwdc-2.3.1.js" type="text/javascript"></script>
 <!-- vue CDN for dev, comment and use local vue.min.js for prod-->
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<!--<script src="js/vue.min.js"></script>#}-->
+<!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+<script src="js/vue.min.js"></script>
 <script src="js/vuetify.min.js"></script>
 <script src="js/filemaker.js" type="text/javascript"></script>
 <script src="js/ui.js" type="text/javascript"></script>
